[gd_scene load_steps=17 format=3 uid="uid://dc1tdt7tutmkn"]

[ext_resource type="Script" path="res://Assets/Scripts/cardController.gd" id="1_m3hck"]
[ext_resource type="Texture2D" uid="uid://cr0e56ely2b44" path="res://Assets/Textures/card_base4.png" id="2_h5hm8"]
[ext_resource type="Texture2D" uid="uid://cg3fht175be5f" path="res://Assets/Textures/card_base.png" id="2_sq5r4"]
[ext_resource type="Theme" uid="uid://dvsojcmw5svs1" path="res://Assets/Themes/label_ingame.tres" id="3_y43it"]
[ext_resource type="Texture2D" uid="uid://8owkkp6domqv" path="res://icon.svg" id="4_8sp17"]
[ext_resource type="Script" path="res://Assets/Scripts/CardStateMachine/card_state_machine.gd" id="4_74406"]
[ext_resource type="Script" path="res://Assets/Scripts/CardStateMachine/States/idle.gd" id="5_2lryn"]
[ext_resource type="Texture2D" uid="uid://ccfol74xcm0eo" path="res://Assets/Textures/card_on_board.png" id="5_mdlh5"]
[ext_resource type="Script" path="res://Assets/Scripts/CardStateMachine/States/dragged.gd" id="6_hk0bl"]
[ext_resource type="Script" path="res://Assets/Scripts/CardStateMachine/States/on_board_active.gd" id="7_jbhnw"]
[ext_resource type="Script" path="res://Assets/Scripts/CardStateMachine/States/aim.gd" id="8_bg5ls"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i8611"]
resource_local_to_scene = true
size = Vector2(169, 238)

[sub_resource type="Animation" id="Animation_y2baj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("back:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("on_hand:scale")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1e-05, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("on_hand:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("back:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_ius2p"]
resource_name = "hide_card"
length = 0.2
step = 0.02
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("back:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.16, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 1), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("back:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("on_hand:scale")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.1, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1e-05, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("on_hand:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_lqtoi"]
resource_name = "turn_card_around"
length = 0.2
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("back:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0712766, 0.128345),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1e-05, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("on_hand:scale")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.128345, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1e-05, 1), Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("on_hand:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.128345),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("back:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.128345),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kgkys"]
_data = {
"RESET": SubResource("Animation_y2baj"),
"hide_card": SubResource("Animation_ius2p"),
"turn_card_around": SubResource("Animation_lqtoi")
}

[node name="CartaUI" type="Control"]
custom_minimum_size = Vector2(170, 238)
layout_mode = 3
anchors_preset = 0
offset_left = -85.0
offset_top = -119.0
offset_right = 85.0
offset_bottom = 119.0
pivot_offset = Vector2(85, 119)
script = ExtResource("1_m3hck")

[node name="on_hand" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1e-05, 1)
pivot_offset = Vector2(85, 0)
mouse_filter = 2

[node name="card_base" type="TextureRect" parent="on_hand"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("2_h5hm8")
expand_mode = 1
stretch_mode = 5

[node name="on_hand_tex" type="TextureRect" parent="on_hand"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 5.0
offset_right = -5.0
offset_bottom = -43.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("2_sq5r4")
expand_mode = 1
stretch_mode = 5

[node name="Nombre" type="Label" parent="on_hand"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -84.0
offset_top = -106.0
offset_right = 84.0
offset_bottom = -58.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("3_y43it")
theme_override_font_sizes/font_size = 30
text = "pipo"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Coste" type="Label" parent="on_hand"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -56.0
offset_right = -11.0
offset_bottom = 37.0
grow_horizontal = 0
theme = ExtResource("3_y43it")
theme_override_font_sizes/font_size = 20
text = "74"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Coste_Antorchas" type="HBoxContainer" parent="on_hand"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -125.0
offset_top = 6.0
offset_right = -6.0
offset_bottom = 35.0
grow_horizontal = 0
alignment = 2

[node name="Descripcion" type="Label" parent="on_hand"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -68.5
offset_top = -59.0
offset_right = 68.5
offset_bottom = -19.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("3_y43it")
theme_override_font_sizes/font_size = 12
text = "Hago esto jeje"
horizontal_alignment = 1
autowrap_mode = 2

[node name="Ataque" type="Label" parent="on_hand"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -32.0
offset_top = -33.0
offset_right = 8.0
offset_bottom = 4.0
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource("3_y43it")
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Vida" type="Label" parent="on_hand"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = -30.0
offset_right = 47.0
offset_bottom = 1.0
grow_vertical = 0
theme = ExtResource("3_y43it")
theme_override_colors/font_color = Color(0.239216, 0.831373, 0, 1)
theme_override_font_sizes/font_size = 30
text = "0"

[node name="Tipo" type="TextureRect" parent="on_hand"]
custom_minimum_size = Vector2(25, 26)
layout_mode = 0
offset_left = 6.0
offset_top = 6.0
offset_right = 31.0
offset_bottom = 32.0

[node name="on_board" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -7.0
offset_top = 27.0
offset_right = 7.0
offset_bottom = -27.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(92, 92)
mouse_filter = 2

[node name="card_base" type="TextureRect" parent="on_board"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -92.0
offset_top = -92.0
offset_right = 92.0
offset_bottom = 92.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("5_mdlh5")
expand_mode = 1
stretch_mode = 5

[node name="on_board_tex" type="TextureRect" parent="on_board"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = -75.0
offset_right = 75.0
offset_bottom = 75.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_8sp17")
expand_mode = 1
stretch_mode = 5

[node name="Vida_on_board" type="Label" parent="on_board"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 6.0
offset_top = -31.0
offset_right = 46.0
grow_vertical = 0
theme = ExtResource("3_y43it")
theme_override_colors/font_color = Color(0.239216, 0.831373, 0, 1)
theme_override_font_sizes/font_size = 30
text = "0"

[node name="Ataque_on_board" type="Label" parent="on_board"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -44.0
offset_top = -31.0
offset_right = -4.0
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource("3_y43it")
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "0"
horizontal_alignment = 2
vertical_alignment = 1

[node name="back" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(85, 0)

[node name="back_tex" type="TextureRect" parent="back"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_h5hm8")

[node name="detectorColision" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="detectorColision"]
position = Vector2(85, 119)
shape = SubResource("RectangleShape2D_i8611")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_kgkys")
}

[node name="CardStateMachine" type="Node" parent="." node_paths=PackedStringArray("card", "current_state")]
script = ExtResource("4_74406")
card = NodePath("..")
current_state = NodePath("idleState")

[node name="idleState" type="Node" parent="CardStateMachine" node_paths=PackedStringArray("dragged_state")]
script = ExtResource("5_2lryn")
dragged_state = NodePath("../draggedState")

[node name="draggedState" type="Node" parent="CardStateMachine" node_paths=PackedStringArray("idle_state", "on_board_state")]
script = ExtResource("6_hk0bl")
idle_state = NodePath("../idleState")
on_board_state = NodePath("../onBoardState")

[node name="onBoardState" type="Node" parent="CardStateMachine" node_paths=PackedStringArray("aim_State")]
script = ExtResource("7_jbhnw")
aim_State = NodePath("../aimState")

[node name="aimState" type="Node" parent="CardStateMachine" node_paths=PackedStringArray("on_board_state")]
script = ExtResource("8_bg5ls")
on_board_state = NodePath("../onBoardState")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_entered" from="." to="CardStateMachine/idleState" method="_on_carta_ui_mouse_entered"]
[connection signal="mouse_entered" from="." to="CardStateMachine/onBoardState" method="_on_carta_ui_mouse_entered"]
[connection signal="mouse_entered" from="." to="CardStateMachine/aimState" method="_on_carta_ui_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="mouse_exited" from="." to="CardStateMachine/idleState" method="_on_carta_ui_mouse_exited"]
[connection signal="mouse_exited" from="." to="CardStateMachine/onBoardState" method="_on_carta_ui_mouse_exited"]
[connection signal="mouse_exited" from="." to="CardStateMachine/aimState" method="_on_carta_ui_mouse_exited"]
[connection signal="area_entered" from="detectorColision" to="CardStateMachine/draggedState" method="_on_detector_colision_area_entered"]
[connection signal="area_exited" from="detectorColision" to="CardStateMachine/draggedState" method="_on_detector_colision_area_exited"]
